--- a/prj.conf
+++ b/prj.conf
@@ -1,1 +1,19 @@
 
+
+CONFIG_DW3000=y
+CONFIG_SOC_NRF52832_ALLOW_SPIM_DESPITE_PAN_58=y
+
+CONFIG_SPI=y
+CONFIG_GPIO=y
+CONFIG_LOG=y
+CONFIG_CONSOLE=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
+
+
+CONFIG_CBPRINTF_FP_SUPPORT=y
+
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=8192
+CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
